fixed title attribute on read more and added class so text doesn't wrap

--- a/scss/includes/_typography.scss
+++ b/scss/includes/_typography.scss
@@ -193,6 +193,10 @@ hr {
 	display: none;
 }
 
+.read-more {
+    white-space: nowrap;
+}
+
 /*********************
 * TABLE STYLES
 *********************/
